# digstdroid

./: .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  README.md  SECURITY.md  podman-compose.yaml
docs/architecture/: adr-001-primary-language-rust.md  adr-002-ios-distribution-strategy.md  adr-003-sovereign-infrastructure-over-fdroid-linking.md
fdroid-bridge/: README.md  pyproject.toml
fdroid-bridge/fdroid_bridge/: __init__.py  errors.py  index.py  metadata.py
fdroid-bridge/tests/: __init__.py  test_index.py  test_metadata.py
server/: Cargo.toml  Containerfile  clippy.toml  deny.toml  rustfmt.toml
server/dk-api/: Cargo.toml
server/dk-api/src/: error.rs  main.rs
server/dk-api/src/routes/: apps.rs  health.rs  index.rs  metrics.rs  mod.rs
server/dk-build/: Cargo.toml
server/dk-build/src/: error.rs  lib.rs
server/dk-common/: Cargo.toml
server/dk-common/src/: config.rs  error.rs  lib.rs  types.rs
server/dk-scanner/: Cargo.toml
server/dk-scanner/src/: error.rs  lib.rs
server/dk-signing/: Cargo.toml
server/dk-signing/src/: error.rs  lib.rs
tools/: dev-setup.sh
