[package]
name = "dk-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "DK-AppStore API server"

[[bin]]
name = "dk-api"
path = "src/main.rs"

[dependencies]
dk-common = { path = "../dk-common" }

# Async runtime
tokio = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Configuration
clap = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
