[package]
name = "dk-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared types and utilities for DK-AppStore"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
