[package]
name = "dk-signing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "DK-AppStore signing service"

[dependencies]
dk-common = { path = "../dk-common" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# Cryptography
ring = { workspace = true }
cryptoki = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
